# nsp5-practice

./: .gitignore  CMakeLists.txt  Readme.md
include/: nsp.h
src/: defclient.c  defserver.c  ec.c  es.c  fc.c  fs.c  tc.c  ts.c
